# python-project

./: .editorconfig  .pre-commit-config.yaml  Dockerfile  makefile  mkdocs.yml  pyproject.toml
src/boilerplate/: main.py
src/python_project/: main.py
