[project]
authors = [
  {email = "christophercostello97@gmail.com", name = "Christopher Costello"}
]
dependencies = [
]
description = "Default template for PDM package"
dynamic = ["version"]
license = {text = "MIT"}
name = "python-project"
readme = "README.md"
requires-python = "==3.12.*"

[tool.mypy]
strict = true

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
  "mkdocs-material>=9.5.24",
  "mkdocs>=1.6.0",
  "mypy>=1.8.0",
  "pre-commit>=3.7.1",
  "pytest-cov>=5.0.0",
  "pytest>=8.0.1",
  "ruff>=0.2.2",
  "toml-sort>=0.23.1"
]

[tool.pdm.scripts]
check = {composite = ["format", "lint", "test", "type_check"]}
docs = "mkdocs serve"
format = {composite = ["format_python", "format_toml"]}
format_check = {composite = ["format_check_python", "format_check_toml"]}
format_check_python = "ruff format --check ."
format_check_toml = "toml-sort pyproject.toml --check"
format_python = "ruff format ."
format_toml = "toml-sort pyproject.toml --in-place --all"
lint = "ruff check ."
lint_check = "ruff check --no-fix ."
test = "pytest --cov=src tests"
type_check = "mypy ."

[tool.pdm.version]
source = "scm"

[tool.ruff]
line-length = 79
target-version = "py312"
lint.ignore = [
  "COM812", # Checks for the absence of trailing commas. (incompatible with formatter)
  "ISC001" # Checks for implicitly concatenated strings on a single line. (incompatible with formatter)
]
lint.select = ["ALL"]
lint.pycodestyle.max-doc-length = 72
lint.pydocstyle.convention = "pep257"
