[project]
name = "python-project"
description = "Default template for PDM package"
authors = [
    {name = "Christopher Costello", email = "christophercostello97@gmail.com"},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}
dynamic = ["version"]

[tool.mypy]
strict = true

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "mkdocs-material>=9.5.24",
    "mkdocs>=1.6.0",
    "mypy>=1.8.0",
    "pre-commit>=3.7.1",
    "pytest-cov>=5.0.0",
    "pytest>=8.0.1",
    "ruff>=0.2.2",
]

[tool.pdm.scripts]
lint = "ruff check ."
format = "ruff format ."
lint_check = "ruff check --no-fix ."
format_check = "ruff format --check ."
type_check = "mypy ."
test = "pytest --cov=src tests"
docs = "mkdocs serve"
check = {composite = ["format", "lint", "test", "type_check"]}

[tool.pdm.version]
source = "scm"

[tool.ruff]
line-length = 79
target-version = "py312"
lint.ignore = [
  "COM812",  # Checks for the absence of trailing commas. (incompatible with formatter)
  "ISC001"   # Checks for implicitly concatenated strings on a single line. (incompatible with formatter)
]
lint.select = ["ALL"]
lint.pycodestyle.max-doc-length = 72
lint.pydocstyle.convention = "pep257"
src = ["src"]

[[tool.mypy.overrides]]
module = ""
ignore_missing_imports = true
